# AGH-Optimization

./: .gitignore  CMakeLists.txt  go.mod  main.cpp  main.go  matrix.cpp  matrix.h  ode_solver.cpp  ode_solver.h  opt_alg.cpp  opt_alg.h  solution.cpp  solution.h  user_funs.cpp  user_funs.h
matrix/: matrix.go
optalg/: opt_alg.go
solution/: solution.go
solver/: ode_solver.go
src/: main.cpp  matrix.cpp  matrix.h  ode_solver.cpp  ode_solver.h  opt_alg.cpp  opt_alg.h  solution.cpp  solution.h  user_funs.cpp  user_funs.h
userfuns/: user_funs.go
